<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".administratorAgenda.AdministratorAgendaActivity">

    <include layout="@layout/toolbar"></include>

    <!--Botón Flotante-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addEventButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:layout_gravity="center"
        android:textAlignment="center"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="280dp"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:tint="?attr/colorPrimary"
        android:onClick="goToAddEvent"
        android:focusable="true" />

    <!--Calendario -->
    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="55dp"
        android:layout_weight="1"
        android:contextClickable="true"
        android:theme="@style/AppTheme.Calendar"
        android:weekDayTextAppearance="?attr/colorPrimaryDark" />

    <!--Día seleccionado-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="370dp"
        android:background="?attr/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">

        <TextView
            android:id="@+id/selectedDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:gravity="left"/>
    </LinearLayout>

    <!--Lista de citas-->
    <FrameLayout
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="318dp"
        android:layout_marginTop="420dp">

        <include layout="@layout/administrator_event_list"/>
    </FrameLayout>



</android.support.design.widget.CoordinatorLayout>