<resources>
    <string name="app_name">Zonget</string>

    <!-- SignIn View -->
    <string name="sign_in_user_text_label">Usuario:</string>
    <string name="sign_in_password_text_label">Password:</string>
    <string name="activity_label">Iniciar Sesión</string>
    <string name="password_forget_text_label">¿Has olvidado la contraseña?</string>
    <string name="sign_in_button_text_label">Entrar</string>
    <string name="not_sign_up_text_view">¿No eres usuario?</string>
    <string name="sign_up_button_text_label">Regístrate</string>
    <string name="ask_date_button_text_label">Pedir Cita</string>

    <!-- SignUp View -->
    <string name="user_sign_up_name_text_label">Nombre:</string>
    <string name="user_sign_up_dni_text_label">DNI:</string>
    <string name="user_sign_up_email_text_label">Email:</string>
    <string name="user_sign_up_password_text_label">Password:</string>
    <string name="sign_up_accept_button_text_label">Aceptar</string>

    <!-- SignUpConfirmation View -->
    <string name="sing_up_confirmation_welcome_text_label">Bienvenido a Zonget</string>
    <string name="sign_up_confirmation_confirmed_email_text_label">Hemos enviado a su correo un email de verificación.</string>

    <!-- UserButtonsMenuList View -->
    <string name="user_ask_date_user_buttons_menu_list_label">Pedir cita</string>

    <!-- QueriesMenu View -->
    <string name="new_query_text_view">Nueva Consulta</string>
    <string name="pending_queries_text_view">Pendientes</string>
    <string name="finished_queries_text_view">Finalizadas</string>

    <!-- NewQuery view -->
    <string name="new_query_tittle_text_view">Título</string>

    <!--AdministratorAgenda View -->
    <string name="agenda_activity_name">Agenda</string>
    <string name="event_content">Content</string>

    <!--AddEvent View -->
    <string name="addEvent_activity_name">Agregar una cita</string>
    <string name="addEvent_description_text">Descripción:</string>
    <string name="addEvent_additional_description_text">Descripción adicional:</string>
    <string name="addEvent_date_text">Fecha y hora:</string>
    <string name="addEvent_title_text">Título:</string>
    <string name="addEvent_button_text">Aceptar</string>

    <!--ModifyEvent View -->
    <string name="modifyEvent_activity_name">Modificar una cita</string>
    <string name="modifyEvent_description_text">Descripción:</string>
    <string name="modifyEvent_additional_description_text">Descripción adicional:</string>
    <string name="modifyEvent_date_text">Fecha y hora:</string>
    <string name="modifyEvent_title_text">Título:</string>
    <string name="modifyEvent_button_text">Aceptar</string>

    <!--AdministratorInbox View -->
    <string name="administrator_inbox_activity_name">Buzón</string>
    <string name="administrator_inbox_from_text">De:</string>
    <string name="administrator_inbox_title_text">Asunto:</string>

    <!--AdministratorQueryDetail View -->
    <string name="administrator_query_detail_activity_name">Ver consulta</string>
    <string name="administrator_query_detail_attached_files_text">Archivos adjuntos</string>

    <!--AdministratorQueryAnswer View -->
    <string name="administrator_query_answer_activity_name">Responder</string>

    <!--AnimalList View -->
    <string name="animal_client_tittle">Animales del cliente</string>

    <!--AnimalDetail View -->
    <string name="item_details">Item Details</string>
    <string name="name_text_label">Nombre</string>
    <string name="species_text_label">Especie:</string>
    <string name="breed_text_label">Raza:</string>
    <string name="chipNum_text_label">Nº de chip:</string>
    <string name="birthday_text_label">Fecha de nacimiento:</string>
    <string name="animal_detail_tittle">Detalle animal</string>

    <!--AdminSearchUser View -->
    <string name="insert_DNI_name_text_label">Nombre completo o DNI:</string>
    <string name="insert_DNI_name_text_input">Inserte nombre o DNI</string>
    <string name="search">Buscar</string>
    <string name="clients_tittle">Clientes</string>

    <!--AddPet & EditPet View -->
    <string name="insert_name_text_label">Nombre:</string>
    <string name="insert_species_text_label">Especie:</string>
    <string name="insert_breed_text_label">Raza:</string>
    <string name="insert_ID_text_label">Número de identificación:</string>
    <string name="insert_birthday_text_label">Fecha de nacimiento:</string>
    <string name="pet_name">Nombre Mascota</string>
    <string name="pet_species">Especie</string>
    <string name="pet_breed">Raza</string>
    <string name="edit_pet_tittle">Editar animal</string>
    <string name="add_pet_tittle">Nuevo Animal</string>
    <string name="ID_Number">XXXXXXXXX</string>
    <string name="date_model">dd/mm/aaaa</string>

    <!--Dialogs-->
    <string name="sureToEliminatePet">¿Está seguro de eliminar esta mascota de la lista?</string>
    <string name="accept_button">Aceptar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="modify_button">Modificar</string>
    <string name="eliminate_button">Eliminar</string>
    <string name="sureToEliminateDate">¿Está seguro de eliminar esta cita de la lista?</string>
    <string name="title_text">Título: </string>
    <string name="description_text">Descripción: </string>
    <string name="additional_description_text">Descripción adicional: </string>
    <string name="date_text">Fecha y hora: </string>
    <string name="pickDateDialog">¿Desea concertar cita el día dd/mm/aaaa a las hh:mm?</string>

    <!--LostPets View-->
    <string name="lost_pets_tittle">Animales Perdidos</string>
    <string name="details_lost_pets">Detalles identificativos:</string>
    <string name="lost_pet_phone">Nº de Contacto:</string>
    <!--PetsForAdoption View-->
    <string name="pets_for_adoption_activity_name">Animales en adopción</string>
    <string name="details_pet_for_adoption">Detalles:</string>
    <!--NewLostPet View-->
    <string name="lost_date_text">Fecha de desaparición:</string>
    <string name="insert_lost_pet_breed">Introduzca raza</string>
    <string name="details_mock">Color, manchas, lunares, cicatrices, etc.</string>
    <string name="phone_mock">XXX-XXX-XXX</string>
    <string name="insert_lost_pet_name">Introduzca nombre</string>
    <string name="insert_lost_pet_name_label">Nombre:</string>


    <!-- Array-->
    <string-array name="description_array">
        <item>Revisión</item>
        <item>Vacuna</item>
        <item>Cirugía</item>
        <item>Esterilización</item>
        <item>Otros</item>
    </string-array>



</resources>
